test: final 통일 및 함수 사용 이유 정리